--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: rpet <marvin@codam.nl>                       +#+                      #
 #                                                    +#+                       #
 #    Created: 2019/10/28 14:42:36 by rpet          #+#    #+#                  #
-#    Updated: 2020/07/21 13:30:25 by rpet          ########   odam.nl          #
+#    Updated: 2020/09/30 11:24:37 by thimovander   ########   odam.nl          #
 #                                                                              #
 # **************************************************************************** #
 
@@ -21,7 +21,8 @@ SRCS = ft_memset.c ft_bzero.c ft_memcpy.c ft_memccpy.c ft_memmove.c \
 	   ft_putnbr_fd.c ft_strcmp.c get_next_line.c get_next_line_utils.c \
 	   ft_lstnew_bonus.c ft_lstadd_front_bonus.c ft_lstsize_bonus.c \
 	   ft_lstlast_bonus.c ft_lstadd_back_bonus.c ft_lstdelone_bonus.c \
-	   ft_lstclear_bonus.c ft_lstiter_bonus.c ft_lstmap_bonus.c
+	   ft_lstclear_bonus.c ft_lstiter_bonus.c ft_lstmap_bonus.c \
+	   ft_str_pos.c
 OBJS = $(SRCS:.c=.o)
 FLAGS = -Wall -Wextra -Werror
 
